--- a/assignment-3/src/components/seller-details/seller-details.html
+++ b/assignment-3/src/components/seller-details/seller-details.html
@@ -2,5 +2,11 @@
 	<p>{{name}}</p>
 	<p>{{category}}</p>
 	<img>{{img}}</img>
-	<product-Tab></product-Tab>
+	<button class="btn btn-primary" ng-click="onAddProduct()">
+		<i class="fa fa-plus" />
+		<span translate="sellerdetails.Add" />
+	</button>
+</div>
+<div>
+	<product-Tab>  </product-Tab>
 </div>
