--- a/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
+++ b/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
@@ -1,8 +1,8 @@
 <label>name</label><input type="text"
-	ng-model="productInfo.product.name" /> <!-- validation og meira fun -->
+	ng-model="newProduct.product.name" /> <!-- validation og meira fun -->
 <label>Price</label><input type="text"
-	ng-model="productInfo.product.price" />
+	ng-model="newProduct.product.price" />
 <label>img</label><input type="text"
-	ng-model="productInfo.product.imagePath" />
+	ng-model="newProduct.product.imagePath" />
 <button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()">OK</button>
 <button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()">Cancel</button>
