--- a/assignment-3/src/components/seller-details/seller-details.html
+++ b/assignment-3/src/components/seller-details/seller-details.html
@@ -1,7 +1,7 @@
 <div>
 	<p>{{name}}</p>
 	<p>{{category}}</p>
-	<img>{{img}}</img>
+	<img src="{{img}}"></img>
 	<button class="btn btn-primary" ng-click="onAddProduct()">
 		<i class="fa fa-plus" />
 		<span translate="sellerdetails.Add" />
