--- a/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
+++ b/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
@@ -1,8 +1,12 @@
-<label>name</label><input type="text"
+<h2 class="form-signin-heading" translate="sellersDlgDetail.Title"></h2>
+<label translate="sellersDlgDetail.Name"></label><input type="text"
 	ng-model="newProduct.product.name" /> <!-- validation og meira fun -->
-<label>Price</label><input type="text"
+</br>
+<label translate="sellersDlgDetail.Price"></label><input type="text"
 	ng-model="newProduct.product.price" />
-<label>img</label><input type="text"
+</br>
+<label translate="sellersDlgDetail.Img"></label><input type="text"
 	ng-model="newProduct.product.imagePath" />
-<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()">OK</button>
-<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()">Cancel</button>
+</br>
+<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()" translate="sellersDlgDetail.Ok"></button>
+<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()" translate="sellersDlgDetail.Cancel"></button>
