--- a/assignment-3/src/components/seller-dlg/seller-dlg.html
+++ b/assignment-3/src/components/seller-dlg/seller-dlg.html
@@ -4,5 +4,5 @@
 	ng-model="seller.category" />
 <label>img</label><input type="text"
 	ng-model="seller.imagePath" />
-<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()">OK</button>
-<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()">Cancel</button>
+<button class="btn btn-lg btn btn-default" type="submit" ng-click="onOk()">OK</button>
+<button class="btn btn-lg btn btn-default" type="submit" ng-click="onCancel()">Cancel</button>
