--- a/assignment-3/src/components/sellers/index.html
+++ b/assignment-3/src/components/sellers/index.html
@@ -1,29 +1,35 @@
-<div> Hér ætti að birtast listi af seljendum - TODO: útfæra það!</div>
+<div class="Sellers-header" ><h3>Söluaðilar</h3></div>
 <div ng-show="isLoading">
 	<loading-message></loading-message>
 </div>
 
 <div ng-hide="isLoading">
-	<button class="btn btn-primary" ng-click="onAddSeller()">
-		<i class="fa fa-plus" />
-		<span translate="sellers.Add" />
-	</button>
-	<table>
-		<thead>
-			<th>
-				<i class="fa fa-plus" />
-				<span translate="sellers.Name" />
-			</th>
-			<th translate="sellers.Category">Category</th>
-		</thead>
-		<tbody>
-			<tr ng-repeat="s in sellers track by s.id">
-				<td><a ng-href="#/seller-details/{{s.id}}">{{s.name}}</a></td>
-				<td>{{s.category}}</td>
-			</tr>
-		</tbody>
-		<tr></tr>
-	</table>
+	<div class="Sellers-add">
+		<button class="btn Sellers-add-button" ng-click="onAddSeller()">
+			<i class="fa fa-plus" />
+			<span translate="sellers.Add" />
+		</button>
+	</div>
+	<div class="Sellers-details">
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead>
+					<th>
+						<i class="fa fa-plus" />
+						<span translate="sellers.Name" />
+					</th>
+					<th translate="sellers.Category">Category</th>
+				</thead>
+				<tbody>
+					<tr ng-repeat="s in sellers track by s.id">
+						<td><a ng-href="#/seller-details/{{s.id}}">{{s.name}}</a></td>
+						<td>{{s.category}}</td>
+					</tr>
+				</tbody>
+				<tr></tr>
+			</table>
+		</div>
+	</div>
 </div>
 
 
