--- a/assignment-3/src/components/sellers/sellers.less
+++ b/assignment-3/src/components/sellers/sellers.less
@@ -1,3 +1,20 @@
 .Sellers {
 	/* TODO: add any Sellers-specific styles here! */
 }
+
+.Sellers-add-button {
+
+}
+
+.Sellers-header {
+	
+}
+
+.Sellers-details {
+
+}
+
+hr {
+	border: 1px solid #ddd;
+	margin-top: 5px;
+}
