--- a/assignment-3/src/components/sellers/index.html
+++ b/assignment-3/src/components/sellers/index.html
@@ -4,11 +4,11 @@
 </div>
 
 <div ng-hide="isLoading">
-	<button class="btn" ng-click="onAddSeller()">
+	<button class="btn btn-default" ng-click="onAddSeller()">
 		<i class="fa fa-plus" />
 		<span translate="sellers.Add" />
 	</button>
-	<button class="btn" ng-click="onEditSeller()">
+	<button class="btn btn-default" ng-click="onEditSeller()">
 		<i class="fa fa-plus" />
 		<span translate="sellers.Edit" />
 	</button>
