--- a/assignment-3/src/components/sellers/sellers.less
+++ b/assignment-3/src/components/sellers/sellers.less
@@ -11,6 +11,15 @@
 }
 
 .Sellers-details {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+}
+
+.modal-content {
+	padding: 15px;
+}
+.form-control-button {
 
 }
 
