--- a/assignment-3/src/components/seller-dlg/seller-dlg.html
+++ b/assignment-3/src/components/seller-dlg/seller-dlg.html
@@ -1,5 +1,5 @@
 
-	<h2 class="form-signin-heading" translate="sellersDlg.Title"></h2>
+	<h2 class="form-control-header" translate="sellersDlg.Title"></h2>
 	<!--<label translate="sellersDlg.Name"></label>-->
 	<input type="text" class="form-control" ng-model="seller.name" placeholder="Nafn" />
 	<!-- validation og meira fun -->
@@ -13,5 +13,5 @@
 	<input type="text" class="form-control" ng-model="seller.imagePath" placeholder="Mynd" />
 	<br>
 
-	<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()" translate="sellersDlg.Ok"></button>
-	<button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()" translate="sellersDlg.Cancel"></button>
+	<button class="btn btn-lg btn btn-default btn-block form-control-button" type="submit" ng-click="onOk()" translate="sellersDlg.Ok"></button>
+	<button class="btn btn-lg btn btn-default btn-block form-control-button" type="submit" ng-click="onCancel()" translate="sellersDlg.Cancel"></button>
