--- a/assignment-3/src/components/sellers/index.html
+++ b/assignment-3/src/components/sellers/index.html
@@ -1,4 +1,4 @@
-<div class="Sellers-header" ><h3>Söluaðilar</h3></div>
+<div class="Sellers-header" ><h3 translate="sellers.HeadTitle"></h3></div>
 <div ng-show="isLoading">
 	<loading-message></loading-message>
 </div>
