--- a/assignment-3/src/components/top-products-tab/productTop.html
+++ b/assignment-3/src/components/top-products-tab/productTop.html
@@ -1,5 +1,5 @@
 <div>
-	<ul ng-repeat="p in products track by p.id">
+	<ul ng-repeat="p in productsTop track by p.id">
 		<get-Product></get-Product>
 	</ul>
 </div>
