--- a/assignment-3/src/components/product/product.less
+++ b/assignment-3/src/components/product/product.less
@@ -7,5 +7,11 @@
 /* Implementation */
 #test {
 	.box-shadow(5px, 5px, 6px, 0.3);
+	float: left;
 	width: 200px;
+}
+
+.well {
+	float: left;
+	margin-right: 15px;
 } 
