--- a/assignment-3/src/components/sellers/sellers.less
+++ b/assignment-3/src/components/sellers/sellers.less
@@ -6,24 +6,39 @@
 
 }
 
-.Sellers-header {
-	
+.Seller-details {
+	display: inline-block;
+	margin-bottom: 15px;
+	width: 100%;
+	padding: 15px;
 }
 
 .Sellers-details {
-	max-width: 330px;
-	padding: 15px;
-	margin: 0 auto;
+	float: left;
+	width: 360px;
+}
+
+.Seller-details-info {
+	float: left;
+	width: 120px;
+	height: 90px;
+	margin-top: 30px;
+	margin-left: 10px;
+}
+
+.Seller-details-info p {
+	margin-left: 15px;
+}
+
+.Seller-details-img {
+	float: left;
+	overflow: hidden;
+}
+
+.Seller-details-add {
+	float: right;
 }
 
 .modal-content {
 	padding: 15px;
-}
-.form-control-button {
-
-}
-
-hr {
-	border: 1px solid #ddd;
-	margin-top: 5px;
 }
