--- a/assignment-3/src/components/product/product.html
+++ b/assignment-3/src/components/product/product.html
@@ -1,4 +1,12 @@
 <div class="well well-lg">
-	{{p.name}}
-	{{p.price}}	
+	<img width="100" height="100" src="{{p.imagePath}}"></img>
+	<lable>Nafn: </label>{{p.name}}
+	</br> 
+	<lable>Verð: </label>{{p.price}}
+	</br>
+    <lable>Stykki seld: </label>{{p.quantitySold}}
+    </br> 
+    <lable>Stykki til: </label>{{p.quantityInStock}}
 </div>
+
+
