ng-src og eyða comments

--- a/assignment-3/src/components/product/product.html
+++ b/assignment-3/src/components/product/product.html
@@ -1,5 +1,5 @@
 <div class="well well-lg">
-	<img width="100" height="100" src="{{p.imagePath}}"></img>
+	<img width="100" height="100" ng-src="{{p.imagePath}}"></img>
 	<lable>Nafn: </label>{{p.name}}
 	</br> 
 	<lable>Verð: </label>{{p.price}}
