--- a/assignment-3/src/components/seller-dlg/seller-dlg.html
+++ b/assignment-3/src/components/seller-dlg/seller-dlg.html
@@ -1,5 +1,5 @@
 
-	<h2 class="form-control-header" translate="sellersDlg.Title"></h2>
+	<h2 class="form-control-header" translate="{{title}}"></h2>
 	<!--<label translate="sellersDlg.Name"></label>-->
 	<input type="text" class="form-control" ng-model="seller.name" placeholder="Nafn" />
 	<!-- validation og meira fun -->
