--- a/assignment-3/src/components/product/product.html
+++ b/assignment-3/src/components/product/product.html
@@ -1,4 +1,4 @@
-<div class="well well-lg">
+<div class="well well-lg" ng-click="onEditProduct(p)">
 	<img width="100" height="100" ng-src="{{p.imagePath}}"></img>
 	<lable>Nafn: </label>{{p.name}}
 	</br> 
