--- a/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
+++ b/assignment-3/src/components/seller-details-dlg/seller-details-dlg.html
@@ -1,21 +1,22 @@
 <h2 class="form-signin-heading" translate="{{title}}"></h2>
-<label translate="sellersDlgDetail.Name"></label><input type="text"
-	ng-model="newProduct.product.name" /> <!-- validation og meira fun -->
-</br>
-<label translate="sellersDlgDetail.Price"></label><input type="text"
-	ng-model="newProduct.product.price" />
-</br>
-<label translate="sellersDlgDetail.QuantitySold"></label><input type="text"
-	ng-model="newProduct.product.quantitySold" /> <!-- validation og meira fun -->
-</br>
-<label translate="sellersDlgDetail.QuantityInStock"></label><input type="text"
-	ng-model="newProduct.product.quantityInStock" />
-</br>
-<label translate="sellersDlgDetail.Img"></label><input type="text"
-	ng-model="newProduct.product.imagePath" />
-</br>
+<!--<label translate="sellersDlgDetail.Name"></label>-->
+<input type="text" ng-model="newProduct.product.name" placeholder="Nafn" class="form-control" />
+<!-- validation og meira fun -->
+<br>
+<!--<label translate="sellersDlgDetail.Price"></label>-->
+<input type="text" ng-model="newProduct.product.price" placeholder="Verð" class="form-control" />
+<br>
+<!--<label translate="sellersDlgDetail.QuantitySold"></label>-->
+<input type="text" ng-model="newProduct.product.quantitySold" placeholder="Stykki seld" class="form-control" />
+<!-- validation og meira fun -->
+<br>
+<!--<label translate="sellersDlgDetail.QuantityInStock"></label>-->
+<input type="text" ng-model="newProduct.product.quantityInStock" placeholder="Stykki til" class="form-control" />
+<br>
+<!--<label translate="sellersDlgDetail.Img"></label>-->
+<input type="text" ng-model="newProduct.product.imagePath" placeholder="Mynd" class="form-control" />
+<br>
 <button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onOk()" translate="sellersDlgDetail.Ok"></button>
 <button class="btn btn-lg btn btn-default btn-block" type="submit" ng-click="onCancel()" translate="sellersDlgDetail.Cancel"></button>
-
 
 
