--- a/assignment-3/src/components/seller-details/seller-details.html
+++ b/assignment-3/src/components/seller-details/seller-details.html
@@ -19,10 +19,10 @@
 
 <form name="outerForm" class="tab-from-demo">
 	<uib-tabset active="activeForm">
-		<uib-tab index="0" heading="{{tab}}">
+		<uib-tab index="0" heading="{{ 'sellerdetails.Tab' | translate }}">
 			<product-Tab></product-Tab>
 		</uib-tab>
-		<uib-tab index="1" heading="{{topTen}}">
+		<uib-tab index="1" heading="{{ 'sellerdetails.TopTen' | translate }}">
 			<product-Top></product-Top>
 		</uib-tab>
 	<uib-tabset>
