--- a/assignment-3/src/components/product/product.less
+++ b/assignment-3/src/components/product/product.less
@@ -15,3 +15,19 @@
 	float: left;
 	margin-right: 15px;
 } 
+
+.Product-details {
+	display: inline-block;
+}
+
+.Product-details-img {
+	float: left;
+	overflow: hidden;
+}
+
+.Product-details-info {
+	float: left;
+	margin-left: 10px;
+}
+
+
