--- a/assignment-3/src/components/sellers/sellers.less
+++ b/assignment-3/src/components/sellers/sellers.less
@@ -33,3 +33,9 @@
 .modal-content {
 	padding: 15px;
 }
+
+.errormsg {
+	width: 100%;
+	background: #ff8080 !important;
+	padding: 10px !important;
+}
