--- a/assignment-3/src/components/seller-dlg/seller-dlg.html
+++ b/assignment-3/src/components/seller-dlg/seller-dlg.html
@@ -4,7 +4,7 @@
 <!-- validation og meira fun -->
 <br>
 
-<div class="well errormsg" ng-show="Input-validation-name">
+<div class="well errormsg" ng-show="InputValidationName">
 	<label translate="sellersDlg.ValidationFailedName"></label>
 </div>
 
@@ -12,7 +12,7 @@
 <input type="text" class="form-control" ng-model="seller.category" placeholder="{{ 'sellersDlg.Category' | translate }}" />
 <br>
 
-<div class="well errormsg" ng-show="Input-validation-category">
+<div class="well errormsg" ng-show="InputValidationCategory">
 	<label translate="sellersDlg.ValidationFailedCategory"></label>
 </div>
 
