img alt properties

--- a/assignment-3/src/components/product/product.html
+++ b/assignment-3/src/components/product/product.html
@@ -1,6 +1,6 @@
 <div class="well well-lg Product-details" ng-click="onEditProduct(p)">
 	<div class="Product-details-img">
-		<img width="100" height="100" ng-src="{{p.imagePath}}"></img>
+		<img width="100" height="100" ng-src="{{p.imagePath}}" alt="Product image missing"></img>
 	</div>
 	<div class="Product-details-info">
 		<label translate="product.Name"></label>&nbsp{{p.name}}
