--- a/assignment-3/src/components/seller-details/seller-details.html
+++ b/assignment-3/src/components/seller-details/seller-details.html
@@ -1,6 +1,6 @@
 <div class="Seller-details panel panel-default">
 	<div class="Seller-details-img">
-		<img height="175px" width="280px" class="img-rounded" ng-src="{{img}}" alt="Seller image"></img>
+		<img height="175px" width="280px" class="img-rounded" ng-src="{{img}}" alt="Seller image missing"></img>
 	</div>
 	<div class="Seller-details-add">
 		<button class="btn btn-default" ng-click="onAddProduct()">
