--- a/assignment-3/src/components/sellers/index.html
+++ b/assignment-3/src/components/sellers/index.html
@@ -16,11 +16,11 @@
 		<table class="table table-hover">
 			<thead>
 				<tr table-sort="name">
-					<th data-columnName="Name">
+					<th data-columnName="name">
 						<i class="fa fa-plus" />
 						<span translate="sellers.Name" />
 					</th>
-					<th data-columnName="Name" translate="sellers.Category"></th>
+					<th data-columnName="name" translate="sellers.Category"></th>
 				</tr>
 			</thead>
 			<tbody>
