--- a/assignment-3/src/components/product/product.html
+++ b/assignment-3/src/components/product/product.html
@@ -1,4 +1,4 @@
-<div class="well well-lg Product-details" ng-click="onEditProduct(p)">
+<div class="well well-lg Product-details" ng-click="onEditProduct(p)" title="Just the (tool)tip">
 	<div class="Product-details-img">
 		<img width="100" height="100" ng-src="{{p.imagePath}}" alt="Product image missing"></img>
 	</div>
