--- a/assignment-3/src/components/product/product.less
+++ b/assignment-3/src/components/product/product.less
@@ -28,8 +28,8 @@
     content: attr(data-tooltip);
     display: none;
     position: absolute;
-    background: #000;
-    color: #fff;
+    background: #bfbfbf;
+    color: #000;
     padding: 4px 8px;
     font-size: 14px;
     line-height: 1.4;
@@ -55,21 +55,10 @@
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-[data-tooltip-position="top"]:before {
-    bottom: 100%;
-    margin-bottom: 6px;
-}
+
 [data-tooltip-position="right"]:before {
     left: 100%;
     margin-left: 6px;
-}
-[data-tooltip-position="bottom"]:before {
-    top: 100%;
-    margin-top: 6px;
-}
-[data-tooltip-position="left"]:before {
-    right: 100%;
-    margin-right: 6px;
 }
 
 /* Tooltip arrow styling/placement */
@@ -94,26 +83,13 @@
     top: 50%;
     margin-top: -6px;
 }
-[data-tooltip-position="top"]:after {
-    bottom: 100%;
-    border-width: 6px 6px 0;
-    border-top-color: #000;
-}
+
 [data-tooltip-position="right"]:after {
     left: 100%;
     border-width: 6px 6px 6px 0;
     border-right-color: #000;
 }
-[data-tooltip-position="bottom"]:after {
-    top: 100%;
-    border-width: 0 6px 6px;
-    border-bottom-color: #000;
-}
-[data-tooltip-position="left"]:after {
-    right: 100%;
-    border-width: 6px 0 6px 6px;
-    border-left-color: #000;
-}
+
 /* Show the tooltip when hovering */
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after {
