--- a/assignment-3/src/components/product/product.less
+++ b/assignment-3/src/components/product/product.less
@@ -23,45 +23,27 @@
     cursor: help;
     padding: 4px;
 }
-/* Tooltip styling */
+
 [data-tooltip]:before {
     content: attr(data-tooltip);
     display: none;
     position: absolute;
-    background: #bfbfbf;
+    background: #E0E0E0;
     color: #000;
     padding: 4px 8px;
-    font-size: 14px;
     line-height: 1.4;
     min-width: 100px;
     text-align: center;
     border-radius: 4px;
 }
-/* Dynamic horizontal centering */
-[data-tooltip-position="top"]:before,
-[data-tooltip-position="bottom"]:before {
-    left: 50%;
-    -ms-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-/* Dynamic vertical centering */
-[data-tooltip-position="right"]:before,
-[data-tooltip-position="left"]:before {
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
 
 [data-tooltip-position="right"]:before {
+    top: 50%;
+    transform: translateY(-50%);
     left: 100%;
     margin-left: 6px;
 }
 
-/* Tooltip arrow styling/placement */
 [data-tooltip]:after {
     content: '';
     display: none;
@@ -71,26 +53,15 @@
     border-color: transparent;
     border-style: solid;
 }
-/* Dynamic horizontal centering for the tooltip */
-[data-tooltip-position="top"]:after,
-[data-tooltip-position="bottom"]:after {
-    left: 50%;
-    margin-left: -6px;
-}
-/* Dynamic vertical centering for the tooltip */
-[data-tooltip-position="right"]:after,
-[data-tooltip-position="left"]:after {
-    top: 50%;
-    margin-top: -6px;
-}
 
 [data-tooltip-position="right"]:after {
+    top: 50%;
+    margin-top: -6px;
     left: 100%;
     border-width: 6px 6px 6px 0;
     border-right-color: #000;
 }
 
-/* Show the tooltip when hovering */
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after {
     display: block;
